(feat) tools: added lib

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,7 +21,13 @@
     "lib": [
       "es2020",
       "dom"
-    ]
+    ],
+    "paths": {
+      "tools": [
+        "dist/tools/tools",
+        "dist/tools"
+      ]
+    }
   },
   "angularCompilerOptions": {
     "enableI18nLegacyMessageIdFormat": false,
