(feat) utils: added lib

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -26,6 +26,10 @@
       "tools": [
         "dist/tools/tools",
         "dist/tools"
+      ],
+      "utils": [
+        "dist/utils/utils",
+        "dist/utils"
       ]
     }
   },
