--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "build:tools": "ng build tools && cd dist/tools && npm publish"
+    "build:tools": "ng build tools && cd dist/tools && npm publish",
+    "build:utils": "ng build utils && cd dist/utils && npm publish"
   },
   "private": true,
   "dependencies": {
