--- a/projects/utils/package.json
+++ b/projects/utils/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "utils",
-  "version": "1.0.0",
+  "name": "ng-shared-utils",
+  "version": "1.1.0",
   "peerDependencies": {
     "@angular/common": "^13.3.0",
     "@angular/core": "^13.3.0"
